fix: enum value 리스트 -> enum name 속성 리스트 반환하도록 수정