@@ -1,22 +1,26 @@
 package com.bestbenefits.takoyaki.config.properties.party;
 
+import lombok.Getter;
+
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Getter
 public enum Category {
-    대외활동("대외활동", 0),
-    취업_스터디("취업/스터디", 1),
-    OTT("OTT", 2),
-    습관챌린지("습관챌린지", 3),
-    게임("게임", 4),
-    소모임("소모임", 5),
-    기타("기타", 6);
+    대외활동("대외활동"),
+    취업_스터디("취업/스터디"),
+    OTT("OTT"),
+    습관챌린지("습관 챌린지"),
+    게임("게임"),
+    소모임("소모임"),
+    기타("기타");
 
-    private final String pascalName;
-    private final int index;
-    Category(String pascalName, int index){
-        this.pascalName = pascalName;
-        this.index = index;
+    private final String name;
+
+    Category(String name){
+        this.name = name;
     }
 
     public static Category fromValue(String categoryName) {
@@ -26,7 +30,9 @@ public enum Category {
         }
         throw new IllegalArgumentException("Invalid category name.");
     }
-    public static List<Category> toList(){
-        return Arrays.stream(Category.values()).toList();
+    public static List<String> toNameList(){
+        return Arrays.stream(Category.values())
+                .map(Category::getName)
+                .collect(Collectors.toList());
     }
 }
