@@ -1,28 +1,32 @@
 package com.bestbenefits.takoyaki.config.properties.party;
 
+import lombok.Getter;
+
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Getter
 public enum ContactMethod {
-    KAKAO_OPENCHAT( "카카오톡 오픈채팅", 0),
-    EMAIL("이메일", 1),
-    CELLPHONE_NUM("전화번호", 2);
+    KAKAO_OPENCHAT( "카카오톡 오픈채팅"),
+    EMAIL("이메일"),
+    CELLPHONE_NUM("전화번호");
 
-    private final String pascalName;
-    private final int index;
-    ContactMethod(String pascalName, int index){
-        this.pascalName = pascalName;
-        this.index = index;
+    private final String name;
+    ContactMethod(String name){
+        this.name = name;
     }
 
-    public static ContactMethod fromValue(String contactMethodName) {
+    public static ContactMethod fromName(String contactMethodName) {
         for (ContactMethod contactMethod : ContactMethod.values()) {
-            if (contactMethod.name().equals(contactMethodName))
+            if (contactMethod.getName().equals(contactMethodName))
                 return contactMethod;
         }
         throw new IllegalArgumentException("Invalid contact method name.");
     }
-    public static List<ContactMethod> toList(){
-        return Arrays.stream(ContactMethod.values()).toList();
+    public static List<String> toNameList(){
+        return Arrays.stream(ContactMethod.values())
+                .map(ContactMethod::getName)
+                .collect(Collectors.toList());
     }
 }
